Html pages complete

--- a/static/rental_session.html
+++ b/static/rental_session.html
@@ -94,32 +94,33 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col">
-            <h2 class="text-center">Roller Stations</h2>
+            <h2 class="text-center">Rental Sessions</h2>
             <table class="table table-striped table-bordered">
                 <thead>
                 <tr>
-                    <th>Serial Number</th>
-                    <th>Name</th>
-                    <th>Address</th>
-                    <th>Id</th>
+                    <th>Status</th>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th>Scooter Id</th>
+                    <th>User Id</th>
                     <th></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td>3423432432</td>
-                    <td>??</td>
-                    <td>73. Kerepesi utca<br>1106 Budapest</td>
+                    <td>FINISHED</td>
+                    <td>12:21</td>
+                    <td>13:23</td>
+                    <td>1</td>
                     <td>1</td>
                     <td>
-                        <a href="/rollerofstation.html" class="btn btn-sm btn-info">Rollers</a>
-                        <a href="/newrollerstation.html" class="btn btn-sm btn-warning"><i class="far fa-edit"></i></a>
+                        <a href="/new_rental_session.html" class="btn btn-sm btn-warning"><i class="far fa-edit"></i></a>
                         <a href="#" class="btn btn-sm btn-danger"><i class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <a href="/newrollerstation.html" class="btn btn-block btn-primary">Add new station</a>
+            <a href="/new_rental_session.html" class="btn btn-block btn-primary">Add new rental rental session</a>
         </div>
     </div>
 </div>
@@ -128,4 +129,3 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
-
