--- a/static/rollerofstation.html
+++ b/static/rollerofstation.html
@@ -83,6 +83,9 @@
                 <a class="nav-link" href="/rollerstation.html">Roller Stations</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/user.html">Users</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/">Exit</a>
             </li>
         </ul>
@@ -95,33 +98,29 @@
             <table class="table table-striped table-bordered">
                 <thead>
                 <tr>
-                    <th>Type</th>
                     <th>Id</th>
-                    <th>Brand</th>
-                    <th>Price $/Min</th>
-                    <th>Available</th>
-                    <th>Action</th>
+                    <th>Station Id</th>
+                    <th>Tag Id</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td>ES3</td>
-                    <td>213123</td>
-                    <td>Acer</td>
                     <td>1</td>
-                    <td><input type="checkbox" checked></td>
+                    <td>1</td>
+                    <td>1</td>
                     <td>
+                        <a href="/rental_session.html" class="btn btn-sm btn-info">Rental Session</a>
                         <a href="/newroller.html" class="btn btn-sm btn-warning"><i class="far fa-edit"></i></a>
                         <a href="#" class="btn btn-sm btn-danger"><i class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
                 <tr>
-                    <td>KickScooter D18E</td>
-                    <td>46352</td>
-                    <td>Segway-Ninebot</td>
-                    <td>2.5</td>
-                    <td><input type="checkbox"></td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>2</td>
                     <td>
+                        <a href="/rental_session.html" class="btn btn-sm btn-info">Rental Session</a>
                         <a href="/newroller.html" class="btn btn-sm btn-warning"><i class="far fa-edit"></i></a>
                         <a href="#" class="btn btn-sm btn-danger"><i class="far fa-trash-alt"></i></a>
                     </td>
