--- a/static/new_rental_session.html
+++ b/static/new_rental_session.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roller Stations - Roller Stations</title>
+    <meta name="viewport" content="width=device-widtSh, initial-scale=1.0">
+    <title>Roller Stations - Edit Stations</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.css">
     <style>
@@ -38,36 +38,8 @@
         .jumbotron h1 {
             font-size: 36px;
         }
-        .table th {
-            background-color: #343a40;
-            color: #fff;
-        }
-        .table td {
-            vertical-align: middle;
-        }
-        .btn-primary {
-            background-color: #e74c3c;
-            border-color: #c0392b;
-        }
-        .btn-primary:hover {
-            background-color: #c0392b;
-            border-color: #a5281a;
-        }
-        .btn-danger {
-            background-color: #f44336;
-            border-color: #d32f2f;
-        }
-        .btn-danger:hover {
-            background-color: #d32f2f;
-            border-color: #b22a25;
-        }
-        .btn-warning {
-            background-color: #f1c40f;
-            border-color: #d4ac0d;
-        }
-        .btn-warning:hover {
-            background-color: #d4ac0d;
-            border-color: #b3950b;
+        .form-group label {
+            font-weight: bold;
         }
     </style>
 </head>
@@ -94,32 +66,31 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col">
-            <h2 class="text-center">Roller Stations</h2>
-            <table class="table table-striped table-bordered">
-                <thead>
-                <tr>
-                    <th>Serial Number</th>
-                    <th>Name</th>
-                    <th>Address</th>
-                    <th>Id</th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>3423432432</td>
-                    <td>??</td>
-                    <td>73. Kerepesi utca<br>1106 Budapest</td>
-                    <td>1</td>
-                    <td>
-                        <a href="/rollerofstation.html" class="btn btn-sm btn-info">Rollers</a>
-                        <a href="/newrollerstation.html" class="btn btn-sm btn-warning"><i class="far fa-edit"></i></a>
-                        <a href="#" class="btn btn-sm btn-danger"><i class="far fa-trash-alt"></i></a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <a href="/newrollerstation.html" class="btn btn-block btn-primary">Add new station</a>
+            <h2 class="text-center">Edit or Add new Rental Session</h2>
+            <form>
+                <div class="form-group">
+                    <label for="status">Status</label>
+                    <input type="text" class="form-control" id="status" name="status">
+                </div>
+                <div class="form-group">
+                    <label for="start">Start</label>
+                    <input type="text" class="form-control" id="start" name="start">
+                </div>
+                <div class="form-group">
+                    <label for="end">End</label>
+                    <input type="text" class="form-control" id="end" name="end">
+                </div>
+                <div class="form-group">
+                    <label for="scooter_id">Scooter Id</label>
+                    <input type="text" class="form-control" id="scooter_id" name="scooter_id">
+                </div>
+                <div class="form-group">
+                    <label for="user_id">User Id</label>
+                    <input type="text" class="form-control" id="user_id" name="user_id">
+                </div>
+                <a class="btn btn-primary" href="/rental_session.html">Save</a>
+                <a class="btn btn-danger" href="/rental_session.html">Cancel</a>
+            </form>
         </div>
     </div>
 </div>
@@ -128,4 +99,3 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
-
