--- a/static/newroller.html
+++ b/static/newroller.html
@@ -55,6 +55,9 @@
                 <a class="nav-link" href="/rollerstation.html">Roller Stations</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/user.html">Users</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/index.html">Exit</a>
             </li>
         </ul>
@@ -66,28 +69,17 @@
             <h2 class="text-center">Edit or Add new Roller</h2>
             <form>
                 <div class="form-group">
-                    <label for="type">Type</label>
-                    <input type="text" class="form-control" id="type" name="type">
-                </div>
-                <div class="form-group">
                     <label for="id">Id</label>
-                    <input type="text" class="form-control" id="id" name="id">
+                    <input type="text" class="form-control" id="id" name="type">
                 </div>
                 <div class="form-group">
-                    <label for="price">Brand</label>
-                    <input type="text" class="form-control" id="price" name="price">
+                    <label for="station_id">Station Id</label>
+                    <input type="text" class="form-control" id="station_id" name="station_id">
                 </div>
                 <div class="form-group">
-                    <label for="price">Price</label>
-                    <input type="text" class="form-control" id="price" name="price">
-                </div>
-                <div class="form-group">
-                    <label for="available">Available</label>
-                    <div class="form-check form-check-lg">
-                        <input type="checkbox" class="form-check-input" id="available" name="available">
-                        <label class="form-check-label" for="available">Yes, it's available</label>
-                    </div>
-                </div>                            
+                    <label for="tag_id">Tag Id</label>
+                    <input type="text" class="form-control" id="tag_id" name="tag_id">
+                </div>                          
                 <a class="btn btn-primary" href="/rollerofstation.html">Save</a>
                 <a class="btn btn-danger" href="/rollerofstation.html">Cancel</a>
             </form>
