--- a/static/newuser.html
+++ b/static/newuser.html
@@ -66,26 +66,50 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col">
-            <h2 class="text-center">Edit or Add new Roller Stations</h2>
+            <h2 class="text-center">Edit or Add new User</h2>
             <form>
                 <div class="form-group">
-                    <label for="serial_number">Serial Number</label>
-                    <input type="text" class="form-control" id="serial_number" name="serial_number">
+                    <label for="created_at">Created Time</label>
+                    <input type="text" class="form-control" id="created_at" name="created_at">
                 </div>
                 <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" name="name">
+                    <label for="status">Status</label>
+                    <input type="text" class="form-control" id="status" name="status">
                 </div>
                 <div class="form-group">
-                    <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address" name="address">
+                    <label for="google_id">Google Id</label>
+                    <input type="text" class="form-control" id="google_id" name="google_id">
+                </div>
+                <div class="form-group">
+                    <label for="facebook_id">Facebook Id</label>
+                    <input type="text" class="form-control" id="facebook_id" name="facebook_id">
+                </div>
+                <div class="form-group">
+                    <label for="apple_id">Apple Id</label>
+                    <input type="text" class="form-control" id="apple_id" name="apple_id">
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input type="text" class="form-control" id="email" name="email">
+                </div>
+                <div class="form-group">
+                    <label for="picture">Picture</label>
+                    <input type="text" class="form-control" id="picture" name="picture">
                 </div>
                 <div class="form-group">
                     <label for="id">Id</label>
                     <input type="text" class="form-control" id="id" name="id">
                 </div>
-                <a class="btn btn-primary" href="/rollerstation.html">Save</a>
-                <a class="btn btn-danger" href="/rollerstation.html">Cancel</a>
+                <div class="form-group">
+                    <label for="family_name">Family Name</label>
+                    <input type="text" class="form-control" id="family_name" name="family_name">
+                </div>
+                <div class="form-group">
+                    <label for="given_name">Given Name</label>
+                    <input type="text" class="form-control" id="given_name" name="given_name">
+                </div>
+                <a class="btn btn-primary" href="/user.html">Save</a>
+                <a class="btn btn-danger" href="/user.html">Cancel</a>
             </form>
         </div>
     </div>
