--- a/static/user.html
+++ b/static/user.html
@@ -94,32 +94,44 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col">
-            <h2 class="text-center">Roller Stations</h2>
+            <h2 class="text-center">Users</h2>
             <table class="table table-striped table-bordered">
                 <thead>
                 <tr>
-                    <th>Serial Number</th>
-                    <th>Name</th>
-                    <th>Address</th>
+                    <th>Created Time</th>
+                    <th>Status</th>
+                    <th>Google Id</th>
+                    <th>Facebook Id</th>
+                    <th>Apple Id</th>
+                    <th>E-mail</th>
+                    <th>Picture</th>
                     <th>Id</th>
+                    <th>Family Name</th>
+                    <th>Given Name</th>
                     <th></th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>3423432432</td>
-                    <td>??</td>
-                    <td>73. Kerepesi utca<br>1106 Budapest</td>
+                <tr>s
+                    <td>2023.09.23</td>
+                    <td>ACTIVE</td>
+                    <td>google</td>
+                    <td>facebook</td>
+                    <td>apple</td>
+                    <td>conor@gmail.com</td>
+                    <td>picture</td>
                     <td>1</td>
+                    <td>Conor</td>
+                    <td>John</td>
                     <td>
-                        <a href="/rollerofstation.html" class="btn btn-sm btn-info">Rollers</a>
-                        <a href="/newrollerstation.html" class="btn btn-sm btn-warning"><i class="far fa-edit"></i></a>
+                        <a href="/rental_session.html" class="btn btn-sm btn-info">Rental Session</a>
+                        <a href="/newuser.html" class="btn btn-sm btn-warning"><i class="far fa-edit"></i></a>
                         <a href="#" class="btn btn-sm btn-danger"><i class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <a href="/newrollerstation.html" class="btn btn-block btn-primary">Add new station</a>
+            <a href="/newuser.html" class="btn btn-block btn-primary">Add new user</a>
         </div>
     </div>
 </div>
@@ -128,4 +140,3 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
-
